--- a/cnd.yaml
+++ b/cnd.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: v1
 kind: Pod
 metadata:
@@ -9,11 +10,11 @@ metadata:
     my-operater: discard
 spec:
   containers:
-  - name: container-network-display
-    image: ghcr.io/shwillcontainer-network-display:1.0.1
-    resoures:
-      limits:
-        memory: "128Mi"
-        cpu: "500m"
-    ports:
+    - name: container-network-display
+      image: ghcr.io/shwillcontainer-network-display:1.0.1
+      resoures:
+        limits:
+          memory: 128Mi
+          cpu: 500m
+      ports:
         containerPort: 3000
