--- a/cnd.yaml
+++ b/cnd.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: v1
 kind: Pod
 metadata:
@@ -11,10 +10,10 @@ metadata:
 spec:
   containers:
     - name: container-network-display
-      image: ghcr.io/shwillcontainer-network-display:1.0.1
-      resoures:
+      image: ghcr.io/shwill/container-network-display:1.0.1
+      resources:  # "resources" war falsch geschrieben
         limits:
           memory: 128Mi
           cpu: 500m
       ports:
-        containerPort: 3000
+        - containerPort: 3000  # Ports müssen als Liste definiert werden
