--- a/deployment.yml
+++ b/deployment.yml
@@ -1,11 +1,11 @@
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-deployment
 spec:
   selector:
-    app: nginx
+    matchLabels:  # Ändern von "app" zu "matchLabels"
+      app: nginx
   replicas: 2
   template:
     metadata:
@@ -19,7 +19,7 @@ spec:
             - containerPort: 80
 
 ---
-apiVersion: V1
+apiVersion: v1  # Kleinschreibung "v1" anstelle von "V1"
 kind: Service
 metadata:
   name: nginx-service
@@ -30,20 +30,3 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 80
-
----
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: minimal-ingress
-spec:
-  rules:
-    - http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: nginx-service
-                port:
-                  number: 80
