--- a/deployment.yml
+++ b/deployment.yml
@@ -2,11 +2,12 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-deployment
+  namespace: default
 spec:
+  replicas: 6
   selector:
     matchLabels:  # Ändern von "app" zu "matchLabels"
       app: nginx
-  replicas: 2
   template:
     metadata:
       labels:
@@ -15,21 +16,30 @@ spec:
       containers:
         - name: nginx
           image: nginx:latest
+          imagePullPolicy: Always
           ports:
             - containerPort: 80
-
+              name: web
+              protocol: TCP
+          readlinessProbe:
+            httpGet:
+              port: web
+              path: /
 ---
 apiVersion: v1  # Kleinschreibung "v1" anstelle von "V1"
 kind: Service
-metadata:
+ metadata:
   name: nginx-service
+  namespyce: default
 spec:
+  type: NodePort
   selector:
     app: nginx
   ports:
-    - protocol: TCP
+    - name: web
       port: 80
-      targetPort: 80
+      targetPort: web
+      nodePort: 3111
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
