--- a/deployment.yml
+++ b/deployment.yml
@@ -26,3 +26,18 @@ spec:
             httpGet:
               port: web
               path: /
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx-service
+  namespace: default
+spec:
+  type: NodePort
+  selector:
+    app: nginx
+  ports:
+    - name: web
+      port: 80
+      targetPort: web
+      nodePort: 3111
