--- a/deployment.yml
+++ b/deployment.yml
@@ -40,4 +40,19 @@ spec:
     - name: web
       port: 80
       targetPort: web
-      nodePort: 3111
+      nodePort: ---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx-service
+  namespace: default
+spec:
+  type: NodePort
+  selector:
+    app: nginx
+  ports:
+    - name: web
+      port: 80
+      targetPort: web
+      nodePort: 30000
+
