--- a/deployment.yml
+++ b/deployment.yml
@@ -5,10 +5,10 @@ metadata:
   name: nginx-deployment
   namespace: default
 spec:
-  replicas: 6
   selector:
     matchLabels:
       app: nginx
+  replicas: 2
   template:
     metadata:
       labels:
@@ -17,15 +17,21 @@ spec:
       containers:
         - name: nginx
           image: nginx:latest
-          imagePullPolicy: Always
           ports:
             - containerPort: 80
-              name: web
-              protocol: TCP
-          readinessProbe:
-            httpGet:
-              port: web
-              path: /
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx-service
+  namespace: default
+spec:
+  selector:
+    app: nginx
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
 ---
 apiVersion: v1
 kind: Service
@@ -39,20 +45,20 @@ spec:
   ports:
     - name: web
       port: 80
-      targetPort: web
-      nodePort: ---
-apiVersion: v1
-kind: Service
+      targetPort: 80
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
 metadata:
-  name: nginx-service
-  namespace: default
+  name: minimal-ingress
 spec:
-  type: NodePort
-  selector:
-    app: nginx
-  ports:
-    - name: web
-      port: 80
-      targetPort: web
-      nodePort: 31111
-
+  rules:
+  - http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: nginx-service
+            port:
+              number: 80
